# Autonomous_bot

./: CMakeLists.txt  README.md  package.xml
custom_world/: model-1_4.sdf  model.config  model.sdf
launch/: display_launch.py  full_mapping_launch.py  launch_gzsim.py  ros_gz_bridge_launch.py
params/: bridge.yaml  slam_config.yaml
rviz/: bot_display.rviz  display.rviz
urdf/: bot_gazebo.xacro  bot_gz_harmonic.xacro  camera.xacro  imu.xacro  lidar.xacro  slam_nav2_bot.urdf.xacro
worlds/: empty.world  gz_har_world.sdf  my_world.sdf
